src/test/deca/syntax/invalid/our_synt_tests/robin-test2-noCbrac.deca
// Error: code missing "}" at the end.

}
    println("I'm missing the }");
